<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.aston.cs3mdd.planaheadmobileapplication.MapFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/map_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        android:background="@drawable/white_boarder"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search_map" />

        <EditText
            android:id="@+id/input_search"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="74dp"
            android:hint="@string/enter_address_or_postcode"
            android:imeOptions="actionSearch"
            android:textColor="#000"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints=""
            android:inputType="textPostalAddress" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


