<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.aston.cs3mdd.planaheadmobileapplication.HomeFragment">

    <!-- Welcome message -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="372dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/home_border"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/welcome_message"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search bar and sorting -->
    <LinearLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome">

        <!-- ImageView for search icon -->
        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="24dp"
            android:layout_height="40dp"
            android:contentDescription="@string/search_map"
            android:src="@drawable/ic_search" />

        <!-- EditText for Search -->
        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_events_by_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <!-- Spinner for sorting options -->
        <Spinner
            android:id="@+id/sortSpinner"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_sort"
            android:entries="@array/sort_options"
            app:layout_constraintStart_toEndOf="@id/editTextSearch"
            app:layout_constraintTop_toTopOf="@id/searchBarLayout"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck,VisualLintBounds" />

    </LinearLayout>

    <!-- TextView for displaying a message when there are no events -->
    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_events_message"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RecyclerView for displaying events -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout" />

    <!-- Guideline for bottom spacing -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
